export const snapshot = {};

snapshot[`array 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      items: {
        description: "",
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`array 2`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description one.",
      items: {
        description: "",
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`array 3`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description two. Description one.",
      items: {
        description: "",
        type: "string",
      },
      type: "array",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
